# echeveria

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  mutation.yml  release.yml
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: ARCHITECTURE.md  DATASETS.md  OBJECTIVES.md  index.md  reference.md
examples/: README.md  manifest_sample.csv  quickstart.ipynb  quickstart.py
src/phytovision/: __init__.py  _num.py  analysis.py  api.py  api_payloads.py  cli.py  config.py  config_schema.py  dashboard.py  exceptions.py  feature_contract.py  io.py  occlusion.py  pipeline.py  quality.py  registries.py  registry.py  saliency.py  seeding.py  serving.py  types.py  validation.py  visualize.py
src/phytovision/cli/: __init__.py  __main__.py  _shared.py  analyze.py  batch.py  benchmark.py  dashboard.py  evaluate.py  phenotype.py  serve.py  simulate.py  train.py  validate.py
src/phytovision/dashboard/: __init__.py  analyze_tab.py  app.py  helpers.py  temporal_tab.py  theme.py
src/phytovision/datasets/: __init__.py  base.py  coco.py  directory.py  folder.py  manifest.py  yolo.py
src/phytovision/evaluation/: __init__.py  _aggregate.py  _common.py  benchmark.py  calibration.py  conformal_regression.py  cross_dataset.py  crossval.py  importance.py  metrics.py  probabilistic.py  regression.py  survival.py  timeseries.py
src/phytovision/explainability/: __init__.py  _reasons.py  base.py  counterfactual.py  feature_reasons.py  physiology.py  shap_explainer.py
src/phytovision/models/: __init__.py  base.py  conformal.py  persistence.py
src/phytovision/models/disease/: __init__.py  base.py  head.py  heuristic.py
src/phytovision/models/drought/: __init__.py  base.py  head.py  rule_based.py
src/phytovision/models/forecasting/: __init__.py  arima.py  base.py  baseline.py  bayesian.py  gaussian_process.py  state_space.py
src/phytovision/models/physiology/: __init__.py  head.py
src/phytovision/models/stress/: __init__.py  ensemble.py  gradient_boosted.py  heuristic.py
src/phytovision/models/survival/: __init__.py  base.py  cohort.py  covariate.py  cox.py  kaplan_meier.py  weibull_aft.py
src/phytovision/models/temporal/: __init__.py  leaf_death.py
src/phytovision/phenotyping/: __init__.py  base.py  colour.py  geometry.py  morphology.py  skeleton.py  texture.py
src/phytovision/phenotyping/aggregation/: __init__.py  base.py  plant_level.py
src/phytovision/preprocessing/: __init__.py  base.py  basic.py
src/phytovision/regions/: __init__.py  base.py  leaf_instance.py  whole_plant.py
src/phytovision/segmentation/: __init__.py  base.py  cleanup.py
src/phytovision/segmentation/leaves/: __init__.py  instance.py  watershed.py
src/phytovision/segmentation/plant/: __init__.py  _threshold_base.py  exg_threshold.py  lab_threshold.py
src/phytovision/simulation/: __init__.py  dataset.py  drydown.py
src/phytovision/temporal/: __init__.py  _fit.py  early_warning.py  forecast.py  history.py  ingest.py  leaf_tracker.py  trend.py
src/phytovision/tracking/: __init__.py
src/phytovision/types/: __init__.py  arrays.py  features.py  geometry.py  results.py
tests/: conftest.py  test_aggregate.py  test_aggregation.py  test_analysis.py  test_api.py  test_benchmark.py  test_bugfixes.py  test_calibration.py  test_cli.py  test_config_schema.py  test_conformal.py  test_conformal_regression.py  test_counterfactual.py  test_cross_dataset.py  test_crossval.py  test_dashboard.py  test_datasets.py  test_deferred_fixes.py  test_disease.py  test_drought_stage.py  test_early_warning.py  test_edge_case_bug_fixes.py  test_ensemble.py  test_evaluation.py  test_feature_extractors.py  test_forecast.py  test_forecast_survival_bug_fixes.py  test_forecasters.py  test_gradient_boosted.py  test_heads.py  test_heuristic.py  test_hunt_fixes.py  test_hunt_r3_fixes.py  test_importance.py  test_io.py  test_io_and_numeric_bug_fixes.py  test_leaf_death.py  test_leaf_tracker.py  test_loaders.py  test_metamorphic.py  (+29 more)
tests/benchmarks/: test_pipeline_bench.py
tests/contracts/: _invariants.py  _strategies.py  conftest.py  test_extractor_contract.py  test_feature_contract.py  test_model_contract.py  test_properties.py  test_provider_contract.py  test_segmenter_contract.py
