[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "phytovision"
version = "0.2.0"
description = "An explainable computer-vision framework for plant phenotyping and water-stress detection (echeveria)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matthew Miezaniec" }]
keywords = ["computer-vision", "plant-phenotyping", "water-stress", "explainable-ai", "segmentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

# Core deps keep the classical v1 pipeline runnable with no training and no ML stack.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-image>=0.26",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# Interpretable + end-to-end models and SHAP explanations.
ml = ["scikit-learn>=1.4", "xgboost>=2.0", "shap>=0.44", "joblib>=1.3"]
# Statistical trajectory forecasters (state-space and ARIMA).
stats = ["statsmodels>=0.14"]
# Experiment tracking for the forecaster benchmark.
tracking = ["mlflow>=2.11"]
# Serving surfaces.
api = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
dashboard = ["streamlit>=1.33", "plotly>=5.20"]
# Documentation site (API reference generated from docstrings).
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
# Developer tooling (test, lint, type-check, build).
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "build>=1.2",
    "twine>=5.0",
    "httpx>=0.27",  # FastAPI TestClient
    "hypothesis>=6.100",  # property-based tests
    "mutmut>=2.5",  # mutation testing
    "pytest-benchmark>=4.0",  # performance benchmarks
]
# All runtime feature extras (single-sourced via self-reference; excludes dev tooling).
all = ["phytovision[ml,stats,tracking,api,dashboard]"]

[project.scripts]
phytovision = "phytovision.cli:main"

[project.urls]
Homepage = "https://github.com/Matthew-Miezaniec/echeveria"
Documentation = "https://github.com/Matthew-Miezaniec/echeveria/tree/main/docs"
Repository = "https://github.com/Matthew-Miezaniec/echeveria"
Issues = "https://github.com/Matthew-Miezaniec/echeveria/issues"
Changelog = "https://github.com/Matthew-Miezaniec/echeveria/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream consumers pick up inline types.
phytovision = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Benchmarks are disabled by default (run once as a correctness check). Measure them with
# `pytest tests/benchmarks --benchmark-enable --no-cov`.
addopts = "-q --strict-markers --strict-config --cov=phytovision --cov-report=term-missing --benchmark-disable"
xfail_strict = true
filterwarnings = [
    # joblib 1.5.x + numpy 2.5 emit this from their own pickle code during model save/load; benign.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
    # starlette's TestClient warns about httpx; test-only and third-party.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
source = ["phytovision"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF100"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these as argument defaults by design, so they are not the B008 mutable-default trap.
extend-immutable-calls = ["fastapi.Form", "fastapi.File", "fastapi.Query", "fastapi.Depends"]

[tool.mutmut]
# Mutation testing on a high-value subset (pure logic where exact-value assertions matter most).
# Runs on Linux or WSL only. See CONTRIBUTING.md for how to run it (disable coverage first).
paths_to_mutate = [
    "src/phytovision/models/",
    "src/phytovision/evaluation/",
]

[tool.mypy]
files = ["src"]
# 3.12+ is required to parse numpy>=2.x type stubs (PEP 695). Runtime still supports 3.11.
python_version = "3.12"
strict = true
ignore_missing_imports = true
# scikit-image / sklearn ship no type stubs; relax the two strict flags that would otherwise flag
# every call into them. The rest of strict mode (untyped defs, implicit optional, ...) stays on.
disallow_untyped_calls = false
warn_return_any = false
